--- a/app/views/groups/_index.html.erb
+++ b/app/views/groups/_index.html.erb
@@ -14,7 +14,7 @@
         <td><%= link_to group.name, group_path(group) %></td>
         <td><%= group.introduction %></td>
         <td>
-          <% if group.owner_id == current_user.id %>
+          <% if current_user.owned?(group) %>
             <%= link_to 'Edit', edit_group_path(group), class: 'btn btn-success' %>
           <% end %>
         </td>
