--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,23 +2,45 @@
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
-      <%= render 'users/info', user: @user %>
+      <%= render 'users/info', user: @owner %>
       <h2 class="mt-3">New book</h2>
       <%= render 'books/form', book: Book.new %>
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Group Detail</h2>
       <table class='table '>
-        <tr>
-          <td><%= attachment_image_tag(@group, :image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
-          <td><%= @group.name %></td>
-          <td><%= @group.introduction %></td>
-          <td>
-            <% if @group.owner_id == current_user.id %>
-              <%= link_to 'Edit', edit_group_path(@group), class:'btn btn-success' %>
-            <% end %>
-          </td>
-        </tr>
+        <thead>
+          <tr>
+            <th></th>
+            <th>グループ名</th>
+            <th>紹介文</th>
+            <th>メンバー</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><%= attachment_image_tag(@group, :image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
+            <td><%= @group.name %></td>
+            <td><%= @group.introduction %></td>
+            <td id='member_list'>
+              <% @members.each do |member| %>
+                <p><%= member.name %></p>
+              <% end %>
+            </td>
+            <td>
+              <% if current_user.owned?(@group) %>
+                <%= link_to 'Edit', edit_group_path(@group), class:'btn btn-success' %>
+              <% else %>
+                <% if current_user.joined?(@group) %>
+                  <%= link_to 'Leave this group', group_user_path(@group.id), method: :delete, class:'btn btn-danger' %>
+                <% else %>
+                  <%= link_to 'Join this group', group_users_path(group_id: @group.id), method: :post,  class:'btn btn-success' %>
+                <% end %>
+              <% end %>
+            </td>
+          </tr>
+        </tbody>
       </table>
     </div>
   </div>
