--- a/app/views/groups/_index.html.erb
+++ b/app/views/groups/_index.html.erb
@@ -13,6 +13,7 @@
         <td><%= attachment_image_tag(group, :image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
         <td><%= link_to group.name, group_path(group) %></td>
         <td><%= group.introduction %></td>
+        <td>メンバー数：<%= group.users.count %></td>
         <td>
           <% if current_user.owned?(group) %>
             <%= link_to 'Edit', edit_group_path(group), class: 'btn btn-success' %>
